[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Space.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Arrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Game.gd" type="Script" id=3]
[ext_resource path="res://objects/CircularViewport.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/ControllableViewport.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/ViewportAndOverlay.tscn" type="PackedScene" id=6]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportAndOverlay" parent="." instance=ExtResource( 6 )]

[node name="MainViewportContainer" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
visible = false
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_1" parent="CenterContainer/Control" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )

[node name="Arrow_2" parent="CenterContainer/Control" instance=ExtResource( 2 )]
visible = false
modulate = Color( 0.0627451, 0.556863, 0.164706, 0.509804 )

[node name="CircularViewport" parent="CenterContainer/Control" instance=ExtResource( 4 )]

[node name="CircularViewport2" parent="CenterContainer/Control" instance=ExtResource( 4 )]
modulate = Color( 0.239216, 0.792157, 0.901961, 1 )

[node name="Rotation" type="Label" parent="."]
margin_left = 24.0
margin_top = 552.0
margin_right = 64.0
margin_bottom = 566.0
text = "Rotation: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Rotation"]
margin_left = 61.0
margin_right = 101.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AngleTo" type="Label" parent="."]
margin_left = 24.0
margin_top = 576.0
margin_right = 85.0
margin_bottom = 590.0
text = "Angle: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AngleTo"]
margin_left = 61.0
margin_right = 101.0
margin_bottom = 14.0

[node name="WorldViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldViewport" type="Viewport" parent="WorldViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="Space" parent="WorldViewportContainer/WorldViewport" instance=ExtResource( 1 )]
